k8s/routing/legacy-ingress/ingress-echo-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-api
  namespace: gateway-demo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-api
                port:
                  number: 80
