k8s/routing/legacy-ingress/ingress-nginx-smoke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-smoke
  namespace: gateway-demo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-smoke
                port:
                  number: 80
